13/07/2016

Added:
	some factions and subfactions lack medics and engineers (http://dev.withsix.com/issues/70799)
	new weapons - M4A3_EP1 and M4A3_RCO_EP1 rifles
	possibility to deactivate mines and hide corpses (missed) to saboteurs and some soldiers of special forces
	possibility to switch seat between all seats of UH60M helicopter

Changed:
	reverted and updated CIT #28047 bug fix
	reverted CCP #71037 bug fix to original state
	deleted CCP #71142 bug fix due to it's faulty
	definitions of some optical sights to more realistic
	deleted unnecessary fire mode (@ 2600 SPM) of GSh302K cannon
	hit value of pistol and some cannon projectiles
	inventory picture of OG7 launcher magazine
	max transportable amount of weapons, magazines and backpacks of some vehicles
	portrait picture of TK_Soldier_Crew_EP1 character
	rate of fire of some cannons
	reverted vision modes of Laserdesignator to original
	civilian and non-transport Urals no longer have huge ammo caches in them
	AI should no longer go prone indoors as much

Fixed:
	CfgWeapons - config references missing sound files (http://dev.withsix.com/issues/22990)
	PMC armored SUV's wheels are too strong (http://dev.withsix.com/issues/23501)
	CfgAmmo - obsolete definitions in M_CRV7_HEPD (http://dev.withsix.com/issues/24772)
	CfgVehicles - irScanXXX issues (http://dev.withsix.com/issues/24913)
	[BAF] unable to switch seats in Chinook (http://dev.withsix.com/issues/25026)
	accuracy value issues with civilian units (http://dev.withsix.com/issues/27790)
	accuracy value issues with military infantry units (http://dev.withsix.com/issues/27791)
	accuracy value issues with military special infantry units (http://dev.withsix.com/issues/27792)
	accuracy value issues with Wheeled_APC units (http://dev.withsix.com/issues/27793)
	accuracy value issues with tank units (http://dev.withsix.com/issues/27794)
	ACR DLC vehicle weapon and ammunition cargo bugs (http://dev.withsix.com/issues/39474)